# project-management-agent

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: commit-tracker.yml
docs/: README.md  api_reference.md  architecture.md  customization_and_advanced_uses.md  development_overview.md  libraries.md  progress.md  progress.yaml  user_guide.md
docs/dashboard/: index.html
src/: README.md  config.py  database.py  main.py
src/api/endpoints/: issues.py  projects.py  templates.py
src/crud/: issue.py  project.py  template.py
src/models/: issue.py  project.py  template.py
src/schemas/: issue.py  project.py  template.py
src/utils/: github_cli.py  github_cli_wrapper.py  template_loader.py  test_cli_wrapper.py
templates/: README.md  budget_tracking.toml  bug_report.toml  change_request.toml  dependency_tracking.toml  epic.toml  feature_request.toml  meeting_minutes.toml  milestone.toml  project_charter.toml  project_status_report.toml  quality_assurance.toml  resource_allocation.toml  retrospective.toml  risk_assessment.toml  sprint_planning.toml  stakeholder_analysis.toml  task.toml  user_story.toml
