[tool.poetry]
name = "ai-hacker-league-pms"
version = "0.1.0"
description = "AI Hacker League Project Management System"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
mypy = "^1.0.0"
isort = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
